Basic non-blog pages and layouts, no content for them yet

--- a/layouts/section/what-we-do.html
+++ b/layouts/section/what-we-do.html
@@ -3,7 +3,7 @@
   {{ partial "langSwitch" . }}
   {{ partial "head.html" . }}
 ...        
-  <h1 id="title">{{i18n "work-with-us"}}</h1>
+  <h1 id="title">{{i18n "what-we-do"}}</h1>
 
 ...
 </html>
