--- a/layouts/section/our-team.html
+++ b/layouts/section/our-team.html
@@ -3,7 +3,7 @@
   {{ partial "langSwitch" . }}
   {{ partial "head.html" . }}
 ...        
-  <h1 id="title">{{i18n "work-with-us"}}</h1>
+  <h1 id="title">{{i18n "our-team"}}</h1>
 
 ...
 </html>
