Stripped out css classes from old site content

--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -4,7 +4,7 @@
   {{ partial "head.html" . }}
 ...        
   <h1 id="title">{{i18n "blog"}}</h1>
-    <div class="post-summary">
+    <div>
       {{ range .Pages }}
           {{ .Render "list"}}
       {{ end }}
