--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,8 +2,7 @@
 title: 'Page not found'
 
 ---
-
-<div class="section error">
+<div>
     <h2>Error 404</h2>
     <p>Sorry! We can’t find the page you were looking for.</p>
     <ul>
