--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,5 +1,5 @@
 <h2>{{ .Title }}</h2>
-<div role="img" class="post-list-photo" aria-label="{{ .Params.imagealt }}" style="height: 20rem; background-size: cover; background-image: url('/img/cds/post-images/{{ .Params.image }}')"></div>
+<div role="img" aria-label="{{ .Params.imagealt }}" style="height: 20rem; background-size: cover; background-image: url('/img/cds/post-images/{{ .Params.image }}')"></div>
 <div class="article-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</div>
 <h3>{{ .Params.author }}</h3>
 <p>{{ .Summary }}</p>
