--- a/layouts/section/our-team.html
+++ b/layouts/section/our-team.html
@@ -5,52 +5,48 @@
 ...        
   <h1 id="title">{{i18n "our-team"}}</h1>
 
-  <section class="section our-team--listing">
-    <h2 class="section--title">Key Contacts</h2>
+  <section>
+    <h2>Key Contacts</h2>
   
-    <div class="container">
-      <div class="row team-listing exec wb-eqht">
+    <div>
+      <div>
         {{ range $member := $.Site.Data.team.exec }}
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="team-member">
+        <div>
+          <div>
   
-            <div class="photo-container">
-              <div class="photo" style="background-image: url('/img/cds/profile-images/{{ $member.imageName }}');"></div>
+            <div>
+              <div style="background-image: url('/img/cds/profile-images/{{ $member.imageName }}');"></div>
             </div>
   
-            <div class="text">
-              <span class="name">{{ $member.name }}</span>
-              <span class="title">{{ index $member.title (string ( $.Site.Language) ) }}</span>
-              <div class="social-links">
+            <div>
+              <span>{{ $member.name }}</span>
+              <span>{{ index $member.title (string ( $.Site.Language) ) }}</span>
+              <div>
                 {{ if ne $member.email nil }}
-                  <span class="social-icons">
+                  <span>
                     <a href="mailto:{{ $member.email }}" aria-label="Link to {{ $member.name }}'s Email">
                       Email
-                      <i class="fa fa-envelope" aria-hidden="true"></i>
                     </a>
                   </span>
                 {{ end }}
                 {{ if ne $member.twitter nil }}
-                  <span class="social-icons">
+                  <span>
                     <a href="https://twitter.com/{{ $member.twitter }}" aria-label="Link to {{ $member.name }}'s Twitter Account">
                       Twitter
-                      <i class="fab fa-twitter" aria-hidden="true"></i>
                     </a>
                   </span>
                 {{ end }}
                 {{ if ne $member.linkedin nil }}
-                  <span class="social-icons">
+                  <span>
                     <a href="https://linkedin.com/in/{{ $member.linkedin }}" aria-label="Link to {{ $member.name }}'s Linkedin Profile">
                       LinkedIn
-                      <i class="fab fa-linkedin" aria-hidden="true"></i>
                     </a>
                   </span>
                 {{ end }}
                 {{ if ne $member.github nil }}
-                  <span class="social-icons">
+                  <span>
                     <a href="https://github.com/{{ $member.github }}" aria-label="Link to {{ $member.name }}'s GitHub profile">
                       GitHub
-                      <i class="fab fa-github-alt" aria-hidden="true"></i>
                     </a>
                   </span>
                 {{ end }}
@@ -63,51 +59,46 @@
       </div>
     </div>
   
-    <h2 class="section--title">Meet the full team</h2>
+    <h2>Meet the full team</h2>
   
-    <div class="container">
-      <div class="row team-listing wb-eqht">
+    <div>
+      <div>
         {{ range $member := .Site.Data.team.team }}
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="team-member">
-  
-              <div class="photo-container">
-                <div class="photo" style="background-image: url('/img/cds/profile-images/{{ $member.imageName }}');"></div>
+          <div>
+            <div>
+              <div>
+                <div style="background-image: url('/img/cds/profile-images/{{ $member.imageName }}');"></div>
               </div>
   
-              <div class="text">
-                <span class="name">{{ $member.name }}</span>
-                <span class="title">{{ index $member.title (string ( $.Site.Language) ) }}</span>
-                <div class="social-links">
+              <div>
+                <span>{{ $member.name }}</span>
+                <span>{{ index $member.title (string ( $.Site.Language) ) }}</span>
+                <div>
                   {{ if ne $member.email nil }}
-                    <span class="social-icons">
+                    <span>
                       <a href="mailto:{{ $member.email }}" aria-label="Link to {{ $member.name }}'s Email">
                         Email
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
                       </a>
                     </span>
                   {{ end }}
                   {{ if ne $member.twitter nil }}
-                    <span class="social-icons">
+                    <span>
                       <a href="https://twitter.com/{{ $member.twitter }}" aria-label="Link to {{ $member.name }}'s Twitter account">
                         Twitter
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
                       </a>
                     </span>
                   {{ end }}
                   {{ if ne $member.linkedin nil }}
-                    <span class="social-icons">
+                    <span>
                       <a href="https://ca.linkedin.com/in/{{ $member.linkedin }}" aria-label="Link to {{ $member.name }}'s LinkedIn Profile">
                         LinkedIn
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
                       </a>
                     </span>
                   {{ end }}
                   {{ if ne $member.github nil }}
-                    <span class="social-icons">
+                    <span>
                       <a href="https://github.com/{{ $member.github }}" aria-label="Link to {{ $member.name }}'s GitHub profile">
                         GitHub
-                        <i class="fab fa-github-alt" aria-hidden="true"></i>
                       </a>
                     </span>
                   {{ end }}
