--- a/layouts/section/page.html
+++ b/layouts/section/page.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
+      {{ partial "css.html" }}
+  </head>
   {{ partial "langSwitch" . }}
   {{ partial "head.html" . }}
 
