--- a/assets/sass/test.scss
+++ b/assets/sass/test.scss
@@ -1,10 +1,3 @@
 body {
-    color: green;
-}
-div {
-    background-color: blue;
-}
-
-#vac-benefits {
-    background-color: red;
+    color: #333;
 }
