Installing netlifycms as an npm module

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         {{ partial "css.html" }}
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        <link href="admin/config.yml" type="text/yaml" rel="cms-config-url">
     </head>
     {{ partial "langSwitch.html" . }}
     {{ partial "head.html" . }}
