--- a/layouts/products/list.html
+++ b/layouts/products/list.html
@@ -1,4 +1,6 @@
-<h2>{{ .Title }}</h2>
-<div role="img" aria-label="{{ .Params.imagealt }}" style="height: 20rem; background-size: cover; background-image: url('/img/cds/{{ .Params.image }}')"></div>
-<p>{{ .Summary }}</p>
-<a href="{{ .RelPermalink }}" class="post-summary-read-more">PRODUCT LINK</a>
+<div class="productCard">
+    <h2>{{ .Title }}</h2>
+    <div role="img" aria-label="{{ .Params.imagealt }}" style="height: 20rem; background-size: cover; background-image: url('/img/cds/{{ .Params.image }}')"></div>
+    <p>{{ .Summary }}</p>
+    <a href="{{ .RelPermalink }}" class="post-summary-read-more">PRODUCT LINK</a>
+</div>
