--- a/layouts/partials/featured-card.html
+++ b/layouts/partials/featured-card.html
@@ -1,4 +1,4 @@
-<div class="featuredCard">
+<div class="cardItem">
     <h3> {{ .title }} </h3>
     <p> {{ .text }} </p>
     <a href={{ .link }} >Call to Action!</a>
