Separate cards into groups that either do or don't grow to fit the space

--- a/assets/sass/test.scss
+++ b/assets/sass/test.scss
@@ -16,8 +16,11 @@ body {
 .cardItem {
     display: inline-block;
     flex: 0 0 33.3333%;
-    flex-grow: 1;
     min-width: 200px;
+}
+
+.growToFit {
+    flex-grow: 1;
 }
 
 .productCard {
