--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,8 @@
         {{ $sass := resources.Get "sass/cds.scss" }}
         {{ $style := $sass | resources.ToCSS }}
         <link rel="stylesheet" href="{{ $style.Permalink }}">
+
+        <link href="admin/config.yml" type="text/yaml" rel="cms-config-url">
         <!--<![endif]-->
         <!--[if lt IE 9]>
         <link href="/assets/lib/gcweb-dist/GCWeb/assets/favicon.ico" rel="shortcut icon" />
@@ -46,8 +48,54 @@
             <a class="wb-sl" href="#wb-cont">{{ i18n "skip-to-content" }}</a>
         </li>
     </ul>
+
+    {{ block "fip" . }}
+        {{ partial "fip.html" }}
+    {{ end }}
+
+    {{ block "menu" . }}
+    <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="cds-menu" typeof="SiteNavigationElement">
+            <div class="container topbar" id="site--topbar">
+                <h2>{{ i18n "topics-menu" }}</h2>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-3">
+                        <a href="/" class="cds-logo" role="img" aria-label="{{ i18n "aria-cds-website" }}"></a>
+                    </div>
+        
+                    <div class="nav-container">
+                        <div id="js-mobileNav">
+                            <div id="js-mobileNav--closeContainer">
+                                <button id="js-mobileNav--button">
+                                    <span class="text">{{ i18n "close" }}</span>
+                                    <span class="glyphicon glyphicon-remove close-icon"></span>
+                                </button>
+                            </div>
+                        <div class="mobile-lang"></div>
+                            <ul class="top-nav">
+                                {{ range $menu := .Site.Menus.main }}
+        
+                                    <li class="top-nav--link">
+                                        <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+                                    </li>
+                                {{end}}
+                            </ul>
+                        </div>
+                        <button class="main-nav-button" id="js-mainNavButton">
+                            <span class="main-nav-button--text">Menu</span>
+                            <span class="main-nav-button--button">
+                                <span class="glyphicon glyphicon-th"></span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    {{ end }}
+
+    {{ block "main" . }}
+    {{ end }}
     
-    {{ .Content }}
+    {{ block "footer" . }}
     
     <footer role="contentinfo" id="wb-info">
         <!-- toto include footer -->
@@ -64,7 +112,7 @@
     <script src="/js/cds-app.js"></script>
     
     <!-- Google Analytics -->
- <!-- TODO -->
-    
+    <!-- TODO -->
+    {{ end }}
     </body>
     </html>
