--- a/assets/sass/cds/_nav.scss
+++ b/assets/sass/cds/_nav.scss
@@ -41,7 +41,7 @@
 ////////////////////////////////////////////////////////////
 
 .cds-logo {
-  background-image: url("img/cds/cds-logo-en.svg");
+  background-image: url("../img/cds/cds-logo-en.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -49,7 +49,7 @@
   z-index: 1;
 
   @include mobile_only {
-    background-image: url("img/cds/cds-logo-en-abbrev.svg");
+    background-image: url("../img/cds/cds-logo-en-abbrev.svg");
     height: 5rem;
     width: 5rem;
   }
