--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,75 +1,64 @@
-{{ block "base.html" }}
-
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        {{ partial "css.html" }}
-        <link href="admin/config.yml" type="text/yaml" rel="cms-config-url">
-    </head>
-    {{ partial "langSwitch.html" . }}
-    {{ partial "head.html" . }}
-    <body>
-        <header role="banner">
-            <div>
-                <div>
-                    <video playsinline muted loop poster="/img/cds/header-images/front-poster-image.jpg" id="js-video-bg" aria-hidden="true">
-                        <source src="/img/cds/header-images/homepage_header.mp4" type="video/mp4">
-                    </video>
-                    <div></div>
-        
-                    <div aria-hidden="true">
-                        <div id="js-play-pause">
-                            <a href="#" id="js-paused">
-                                <span></span>
-                                <span>{{i18n "play"}}<span> video</span></span>
-                            </a>
-                            <a href="#" id="js-playing" style="display: none;">
-                                <span></span>
-                                <span>{{i18n "pause"}}<span class="sr-only"> video</span></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-        
-                <div>
-                    <div>
-                        <div>
-                            <div>
-                                <object type="image/svg+xml" tabindex="-1" data="/img/cds/cds-logo-{{ (string ($.Site.Language)) }}.svg"></object>
-                                <h1>{{ i18n "canadian-digital-service" }}</h1>
-                            </div>
-                            <div>{{ i18n "homepage-tag-line" }}</div>
-                        </div>
+{{ define "main" }}
+<header role="banner">
+        <div class="page-banner">
+            <div class="page-banner--video">
+                <video playsinline muted loop poster="/img/cds/header-images/front-poster-image.jpg" id="js-video-bg" aria-hidden="true">
+                    <source src="/img/cds/header-images/homepage_header.mp4" type="video/mp4">
+                </video>
+                <div class="page-banner--scrim"></div>
+    
+                <div class="page-banner--video-controls hidden" aria-hidden="true">
+                    <div id="js-play-pause">
+                        <a href="#" id="js-paused" class="video-banner--control-button">
+                            <span class="fa fa-play pause-ico"></span>
+                            <span class="button-text">{{ i18n "play" }}<span class="sr-only"> video</span></span>
+                        </a>
+                        <a href="#" id="js-playing" class="video-banner--control-button" style="display: none;">
+                            <span class="fa fa-pause pause-ico"></span>
+                            <span class="button-text">{{ i18n "pause" }}<span class="sr-only"> video</span></span>
+                        </a>
                     </div>
                 </div>
             </div>
-        
-        </header>
-        <main role="main" property="mainContentOfPage">
-            <section id="wb-cont">
-                {{ .Content }}
-            </section>
-        </main>
-
-        <section>
-                <div>
-                    <div>
-                        <div>
-                            <div></div>
+    
+            Menu?
+    
+            <div class="page-banner--tag-line">
+                <div class="container">
+                    <div class="row">
+                        <div class="page-banner--tag-line--logo-container col-xs-12 col-sm-3 col-sm-offset-2 col-md-offset-3">
+                            <object type="image/svg+xml" tabindex="-1" data="/img/cds/cds-logo-{{ string (.Site.Language) }}.svg" class="page-banner--tag-line--logo"></object>
+                            <h1 class="wb-inv">{{ i18n "canadian-digital-service" }}</h1>
                         </div>
-                        <div>
-                            <h2>Connect with us!</h2>
-                            TODO include contact info
-                        </div>
+                        <div class="h1 col-xs-12 col-sm-7 col-md-6">{{ i18n "homepage-tag-line" }}</div>
                     </div>
                 </div>
-            </section>	   
-            
-            <section>
-                TODO include mailing list
-            </section>
-        {{ partial "footer.html" . }}
-    </body>
-</html>
+            </div>
+        </div>
+    
+    </header>
+    <main role="main" property="mainContentOfPage">
+        <section id="wb-cont">
+            {{ .Content }}
+        </section>
+    </main>
+
+    <section>
+        <div>
+            <div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <h2>Connect with us!</h2>
+                    TODO include contact info
+                </div>
+            </div>
+        </div>
+    </section>	   
+        
+    <section>
+        TODO include mailing list
+    </section>
 
 {{ end }}
