--- a/layouts/section/our-team.html
+++ b/layouts/section/our-team.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  {{ partial "css.html" }}
-  {{ partial "langSwitch" . }}
-  {{ partial "head.html" . }}
-...        
+{{ define "main" }}
   <h1 id="title">{{i18n "our-team"}}</h1>
 
-  <section>
-    <h2>Key Contacts</h2>
+  {{ .Content }}
+  <section class="section our-team--listing">
+      <h2 class="section--title">{{ i18n "key-contacts" }}</h2>
   
     <div>
       <div class="cardContainer">
@@ -111,6 +107,4 @@
       </div>
     </div>
   </section>
-  
-...
-</html>
+{{ end }}
